SFDCProject/src/objects/FS_Dispatch_Template__c.object
<CustomObject>
    <description>Used to create templates for quick creating FS Dispatch records</description>
    <fields>
        <fullName>Bill_To__c</fullName>
        <label>Bill To</label>
        <picklist>
            <controllingField>Financial_Responsibility__c</controllingField>
            <picklistValues>
                <fullName>Not Billable to Third Party</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Installer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>System Owner / Fund</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prior Service Partner</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Do_Not_Send_Survey__c</fullName>
        <defaultValue>false</defaultValue>
        <description>when checked, the trigger email alert &apos;FS Customer Survey&apos; is disabled.</description>
        <label>Do Not Send Survey</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Don_t_send_dispatch_email_to_customer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Don&apos;t send dispatch email to customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FS_Dispatch_Constraint__c</fullName>
        <description>Dispatch Constraint to be used for creating the new FS Dispatch</description>
        <inlineHelpText>Select the Dispatch Constraint to be used for creating the new FS Dispatch</inlineHelpText>
        <label>FS Dispatch Constraint</label>
        <picklist>
            <picklistValues>
                <fullName>N/A</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FS_Dispatch_Instructions__c</fullName>
        <description>FS Dispatch Instructions to be used for the new FS Dispatch</description>
        <inlineHelpText>Enter the FS Dispatch Instructions to be used for the new FS Dispatch</inlineHelpText>
        <label>FS Dispatch Instructions</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FS_Dispatch_Phase__c</fullName>
        <description>Dispatch Phase for the new FS Dispatch</description>
        <inlineHelpText>Select the Dispatch Phase for the new FS Dispatch</inlineHelpText>
        <label>FS Dispatch Phase</label>
        <picklist>
            <picklistValues>
                <fullName>Discover</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resolve</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discover and Resolve</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FS_Dispatch_State__c</fullName>
        <description>FS Dispatch State for the new FS Dispatch record</description>
        <inlineHelpText>Select the FS Dispatch State for the new FS Dispatch record</inlineHelpText>
        <label>FS Dispatch State</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dispatched</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dispatch Declined</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dispatch Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dispatch Findings Reported</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dispatch Findings Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dispatch Findings Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Financial_Responsibility__c</fullName>
        <description>Party who is financially responsible for this FS Ticket</description>
        <inlineHelpText>Select the party who will be financially responsible for this FS Ticket</inlineHelpText>
        <label>Financial Responsibility</label>
        <picklist>
            <picklistValues>
                <fullName>Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sunrun</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>FS Dispatch Template</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Financial_Responsibility__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>FS Dispatch Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fs Dispatch Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>